# tokenize

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
assets/: initial_prompt.md
src/: cli.rs  config.rs  context_generator.rs  file_data.rs  lib.rs  main.rs
