[package]
name = "tokenize"
description = "Tokenize your codebase blazingly fast into a single file for LLM Context 🚀🤖 "
license = "MIT OR Apache-2.0"
keywords = ["ai", "files"]
categories = ["command-line-utilities"]
repository = "https://github.com/DefinitelyNotSimon13/tokenize"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
env_logger = "0.11.8"
ignore = "0.4.23"
log = "0.4.27"
thiserror = "2.0.12"
